Add dates to getBalance
