# lib/handlers/getBalance.js
@@ -13,13 +13,22 @@ const {AleError, codes} = require('../errors');
 
 exports.handler = function getBalance(req, res, next) {
     let id = parseInt(req.params.bookId);
+    let startDate;
+    let endDate;
     Book.findById(id).then(book => {
         if (!book) {
             throw new AleError(`Book with id ${id} does not exist`, codes.BookDoesNotExist);
         }
+        if (req.query.startDate) {
+            startDate = new Date(req.query.startDate);
+        }
+        if (req.query.endDate) {
+            endDate = new Date(req.query.endDate);
+            console.log(endDate);
+        }
         const { account, perPage, page } = req.query;
         const inQuote = req.query.inQuoteCurrency !== false;
-        return book.getBalance({ account, perPage, page }, inQuote);
+        return book.getBalance({startDate, endDate, account, perPage, page }, inQuote);
     }).then(balance => {
         res.json(balance);
     }).catch(err => {
